<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <DUT Name="ST_General" Id="{a39d0f48-12cf-4fdb-ab91-05df24c1c258}">
    <Declaration><![CDATA[TYPE ST_General :
STRUCT
	AcknowledgeAllCmd : BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>